CNI-network-plugin/netpol.yaml
# deny-to-pod-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-to-pod-b
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
  - Ingress
  ingress: []
